<?xml version="1.0" encoding="utf-8"?><!--专栏-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.stx.xhb.androidx.XBanner
        android:id="@+id/banner_mine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textAppearance="@style/TextStyleBlack12sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip10"
                android:layout_marginBottom="@dimen/dip10"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_favorite_yellow"
                android:drawablePadding="@dimen/dip5"
                android:gravity="center"
                android:text="@string/mine_favorite" />

            <TextView
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@color/blackGray" />

            <TextView
                android:textAppearance="@style/TextStyleBlack12sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip10"
                android:layout_marginBottom="@dimen/dip10"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_record"
                android:drawablePadding="@dimen/dip5"
                android:gravity="center"
                android:text="@string/view_history" />

            <TextView
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@color/blackGray" />

            <TextView
                android:textAppearance="@style/TextStyleBlack12sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip10"
                android:layout_marginBottom="@dimen/dip10"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_download_yellow"
                android:drawablePadding="@dimen/dip5"
                android:gravity="center"
                android:text="@string/download_offline" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/blackGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textAppearance="@style/TextStyleBlack12sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip10"
                android:layout_marginBottom="@dimen/dip10"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_potato"
                android:drawablePadding="@dimen/dip5"
                android:gravity="center"
                android:text="@string/potato" />

            <TextView
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@color/blackGray" />

            <TextView
                android:textAppearance="@style/TextStyleBlack12sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip10"
                android:layout_marginBottom="@dimen/dip10"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_notification"
                android:drawablePadding="@dimen/dip5"
                android:gravity="center"
                android:text="@string/notification" />

            <TextView
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@color/blackGray" />

            <TextView
                android:textAppearance="@style/TextStyleBlack12sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip10"
                android:layout_marginBottom="@dimen/dip10"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_ideas"
                android:drawablePadding="@dimen/dip5"
                android:gravity="center"
                android:text="@string/ideas" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textAppearance="@style/TextStyleBlack12sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip10"
                android:layout_marginBottom="@dimen/dip10"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_ticket_offset"
                android:drawablePadding="@dimen/dip5"
                android:gravity="center"
                android:text="@string/ticket_offset" />

            <TextView
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@color/blackGray" />

            <TextView
                android:textAppearance="@style/TextStyleBlack12sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip10"
                android:layout_marginBottom="@dimen/dip10"
                android:layout_weight="1"
                android:drawableTop="@drawable/icon_set_yellow"
                android:drawablePadding="@dimen/dip5"
                android:gravity="center"
                android:text="@string/setting" />

            <TextView
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@color/blackGray" />

            <TextView
                android:textAppearance="@style/TextStyleBlack12sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dip10"
                android:layout_marginBottom="@dimen/dip10"
                android:layout_weight="1"
                android:drawableTop="@null"
                android:drawablePadding="@dimen/dip5"
                android:gravity="center"
                android:text="" />
        </LinearLayout>

    </LinearLayout>
    <!--banner图-->
    <!--广告：判断为多张图片就用banner显示，一张图就直接imageview显示；片源：直接列表显示-->

</RelativeLayout>